--- a/index.html
+++ b/index.html
@@ -3,23 +3,35 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Play</title>
+    <title>Game On!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- MATERIALIZE CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- ANIMATE CSS -->
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <!-- OUR CSS -->
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/styles.css" />
 </head>
 
 <body>
+    <header></header>
 
-<!-- logoDiv -->
+    <main>
+    <!-- logoDiv -->
+    <!-- <div class="row"> -->
+        <div class="row" id="logoDiv">
 
-<!-- findDiv -->
+        </div>
+    <!-- </div> -->
 
-<!-- createDiv -->
+    <!-- findDiv -->
+
+    <!-- createDiv -->
+    </main>
 
 
+    <footer></footer>
 
 
 
