gaming and sports divs

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!--searchResults-->
         <div class="col m6" id="searchResultsDiv">
 
-            <div class="row">
+            <div class="row" id="zipCodeRow">
                 <div class="col m6" id="zipCodeDiv"></div>
             </div>
             
@@ -63,7 +63,7 @@
 
                 <!-- right space -->
                 <div class="col m3"></div>
-                
+
             </div>
 
         </div>
