pre-form attempt

--- a/index.html
+++ b/index.html
@@ -46,27 +46,34 @@
         <div class="col m3"></div>
 
         <!--searchResults-->
-        <div class="col m6" id="searchResultsDiv">
+        <div class="col m6">
+            <div id="searchResultsDiv"></div>
 
-            <div class="row" id="zipCodeRow">
-                <div class="col m6" id="zipCodeDiv"></div>
+            <!-- <div class="row" id="zipCodeRow">
+                <div class="col m6">
+                    <div id="zipCodeDiv"></div>
+                </div>
             </div>
             
-            <div class="row">
+            <div class="row"> -->
 
                 <!--left space-->
-                <div class="col m3"></div>
+                <!-- <div class="col m3"></div>
                 
-                <div class="col m3" id="gamingBtnDiv"></div>
+                <div class="col m3">
+                    <div id="gamingBtnDiv"></div>
+                </div>
 
-                <div class="col m3" id="sportsBtnDiv"></div>
+                <div class="col m3">
+                    <div id="sportsBtnDiv"></div>
+                </div> -->
 
                 <!-- right space -->
-                <div class="col m3"></div>
-
-            </div>
+                <!-- <div class="col m3"></div> -->
 
         </div>
+
+    </div>
 
         <!--right space-->
         <div class="col m3"></div>
