before show-hide

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
 
         <!--searchResults-->
         <div class="col m6">
-            <div id="searchResultsDiv"></div>
+            <div id="dynamicDiv">
+                <form class="col m12" id="searchForm"></form>
+                <!-- zip code input -->
+            </div>
+
+
 
             <!-- <div class="row" id="zipCodeRow">
                 <div class="col m6">
