basic find event div done

--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
             <div id="dynamicDiv">
                 
                 <div class="row" id="zipCodeRow">
-                    <div class="container" id="resultsDiv">
-                        <div class="col s12">
 
-                            Enter your zip code:
+                    <div class="container" id="resultsDiv">
+                        <div class="col m12">
+
+                            <strong>Enter your zip code:</strong>
                             <div class="input-field inline">
 
                             <input id="zipCode" type="text" class="validate">
@@ -63,10 +64,10 @@
                         </div>
                     </div>
                 </div>
-
+<!-- ------------------------------ -->
                 <div class="row" id="gameSportsRow">
 
-                    <div class="container" id="sportsBtnDiv">
+                    <div class="container" id="buttonDiv">
 
                     <div class="col m6">
                         <div id="gamingBtnDiv"></div>
@@ -78,9 +79,74 @@
                     
                     </div>
                 </div>
+<!-- ------------------------------- -->
+                <div class="row" id="submitBtnRow">
+
+                    <div class="container" id="submitDiv">
+
+                        <div class="col m4"></div>
+
+                        <div class="col m4">
+                            <div id="submitBtnDiv"></div>
+                        </div>
+
+                        <div class="col m4"></div>
+
+                    </div>
+
+                </div>
+<!-- ------------------------------- -->
+
+    <div class="container" id="createEventDiv">
+
+        <div class="row">
+            <form class="col m12">
+                    <div class="row">
+                        <div class="input-field col m6">
+                        <input id="name" type="text" class="validate">
+                        <label for="name">Name</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col m6">
+                        <input id="address" type="text" class="validate">
+                        <label for="address">Address</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col m6">
+                        <input id="email" type="text" class="validate">
+                        <label for="email">Email</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col m6">
+                        <input id="title" type="text" class="validate">
+                        <label for="title">Title</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col m6">
+                        <input id="description" type="text" class="validate">
+                        <label for="description">Description</label>
+                        </div>
+                    </div>
+
+                </form>
+        </div>
 
 
 
+
+
+
+
+
+    </div>
 
 
 
