fixed line colors

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                             <!-- <strong>Enter your zip code:</strong> -->
                             <div class="input-field">
                             <input id="zipCode" type="text" class="validate center-align">
-                            <label for="zipCode">Zip Code</label>
+                            <!-- <label for="zipCode">Zip Code</label> -->
+                            <span class="helper-text" data-error="wrong" data-success="right">Zip Code</span>
                             </div>
                         </div>
                     </form>
