--- a/results.html
+++ b/results.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tables Page</title>
-
+ 
     <script src="https://code.jquery.com/jquery.js"></script>
 
     <!-- MATERIALIZE CSS   -->
@@ -19,6 +19,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 
 </head>
+
+<style>
+    
+/* .card-image{
+    height: 400px; /* Your height here */
+    /* /* overflow: hidden;} */
+
+/* .card-image {
+    height:250px;
+    width:100%;
+} */
+
+</style>
 
 
 <!-- BODY -->
@@ -141,7 +154,7 @@
    
         var cardContent = `
         <div class="col m4">
-            <div class="card">
+            <div class="card medium">
                 <div class="card-image">
                     <img src="${card.image}">
                     <span class="card-title">${card.title}</span>
