--- a/.EXTRAS/test.html
+++ b/.EXTRAS/test.html
@@ -19,8 +19,10 @@
         <!-- logoDiv -->
         <div class="row" id="logoDiv"></div>
     </header>
+
     <!--start main-->
     <main>
+
         <div class="row" id="buttonRow">
             <!-- left space buttonRow-->
             <div class="col m3"></div>
@@ -32,17 +34,25 @@
             <div class="col m3"></div>
         </div>
         <!--end buttonRow-->
+
         <!-- start dynamic area -->
         <div class="row" id="dynamicRow">
+
             <!--left space dynamicRow-->
             <div class="col m3"></div>
+
             <div class="col m6">
                 <!-- start dynamicDiv -->
                 <div id="dynamicDiv">
+
                     <div class="container" id="findEventDiv">
+
                         <div class="row" id="zipCodeRow">
+
                             <div class="col m4"></div>
+
                             <div class="col m4">
+
                                 <form>
                                     <div class="row center-align" id="rowCenterZip">
                                         <!-- <strong>Enter your zip code:</strong> -->
@@ -52,90 +62,120 @@
                                         </div>
                                     </div>
                                 </form>
+
                             </div>
+
                             <div class="col m4"></div>
+
                         </div>
+
+
                         <div class="row" id="gameSportsRow">
+
                             <div class="col m6">
                                 <div class="container">
                                     <button class="btn fade-in center-align" id="gamingBtn">Gaming</button>
                                 </div>
                             </div>
+
                             <div class="col m6">
                                 <div class="container">
                                     <button class="btn fade-in center-align" id="sportsBtn">Sports</button>
                                 </div>
                             </div>
+
                         </div>
+
                         <div class="row" id="submitFindDiv">
+
                             <div class="col m12">
+
                                 <button class="btn fade-in center-align" id="submitBtnFind">Submit</button>
+
                             </div>
+
                         </div>
+
+
                     </div>
+
                     <!-- ------------------------------- -->
+
                     <div class="container fade-in" id="createEventDiv">
+
                         <div class="row" id="eventFirstRow">
                             <form class="col m12">
                                 <div class="row">
-                                    <!-- start title -->
+                                    <!-- start name and address -->
                                     <div class="input-field col m6">
-                                        <input id="title" type="text" maxlength="40">
-                                        <!-- <label for="title">Title</label> -->
-                                        <span class="helper-text" data-error="wrong" data-success="right">Title</span>
+                                        <input id="name" type="text">
+                                        <label for="name">Name</label>
                                     </div>
-                                    <!-- end title -->
-                                    <!-- start address -->
+
                                     <div class="input-field col m6">
                                         <input id="address" type="text">
-                                        <!-- <label for="address">Address</label> -->
-                                        <span class="helper-text" data-error="wrong" data-success="right">Address</span>
+                                        <label for="address">Address</label>
                                     </div>
-                                    <!--end name and address-->
-                                    <!-- start email -->
+                                </div>
+                                <!--end name and address-->
+
+                                <!-- start email -->
+                                <div class="row">
                                     <div class="input-field col m6">
-                                        <input id="email" type="email">
-                                        <!-- <label for="email">Email</label> -->
-                                        <span class="helper-text" data-error="wrong" data-success="right">Email</span>
+                                        <input id="email" type="text">
+                                        <label for="email">Email</label>
                                     </div>
-                                    <!-- end email -->
-                                    <div class="input-field col m6">
-                                        <input id="zip" type="number" maxlength="5">
-                                        <!-- <label for="email">Email</label> -->
-                                        <span class="helper-text" data-error="wrong" data-success="right">Zip Code</span>
-                                    </div>
-                                    <!-- start radio buttons -->
+                                </div>
+                                <!-- end email -->
+
+                                <!-- start radio buttons -->
+                                <div class="row">
                                     <div class="col m6">
                                         <form action="#">
                                             <p>
                                                 <label>
-                                                    <input name="group1" type="radio" id="gameRadio" checked />
+                                                    <input name="group1" type="radio" checked />
                                                     <span>Gaming</span>
                                                 </label>
                                             </p>
                                             <p>
                                                 <label>
-                                                    <input name="group1" type="radio" id="sportRadio" />
+                                                    <input name="group1" type="radio" />
                                                     <span>Sports</span>
                                                 </label>
                                             </p>
                                         </form>
                                     </div>
+
                                     <!-- DATE AND TIME -->
                                     <div class="col m6">
-                                        <!-- <label for="datepicker">Date</label> -->
-                                        <input type="datetime-local" class="datepicker" id="datepicker">
-                                        <span class="helper-text" data-error="wrong" data-success="right">Date and Time</span>
+                                        <label for="datepicker">Date</label>
+                                        <input type="text" class="datepicker" id="#datepicker">
                                     </div>
-                                    <!-- end radio buttons -->
-                                    <!-- start description -->
+
+                                </div>
+                                <!-- end radio buttons -->
+
+
+                                <!-- start title -->
+                                <div class="row">
+                                    <div class="input-field col m6">
+                                        <input id="title" type="text">
+                                        <label for="title">Title</label>
+                                    </div>
+                                </div>
+                                <!-- end title -->
+
+                                <!-- start description -->
+                                <div class="row" id="descriptionRow">
                                     <div class="input-field col m12">
-                                        <textarea id="description" class="materialize-textarea" maxlength="100"></textarea>
-                                        <!-- <label for="description">Description</label> -->
-                                        <span class="helper-text" data-error="wrong" data-success="right">Description</span>
+                                        <textarea id="description" class="materialize-textarea"></textarea>
+                                        <label for="description">Description</label>
                                     </div>
                                 </div>
                                 <!-- end description -->
+
+
                                 <div class="row">
                                     <button class="btn-large fade-in" id="submitCreateDiv">Submit</button>
                                 </div>
@@ -143,42 +183,103 @@
                         </div>
                     </div>
                     <!-- end createEventDiv-->
+
+
+
+
+
+
+
+
+
+
+
+
+
                 </div>
                 <!--end dynamicDiv-->
+
+
+
+
+
+
+
             </div>
+
             <!-- </div> -->
+
             <!--right space dynamicRow-->
             <div class="col m3"></div>
+
         </div>
+
+
+
+
+
     </main>
     <!--end main-->
-    <footer></footer>
-    <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-database.js"></script>
-    <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyBmSBDjAPa-8O1_Kp495smE2USfwIK_3nc",
-            authDomain: "game-on-33a97.firebaseapp.com",
-            databaseURL: "https://game-on-33a97.firebaseio.com",
-            projectId: "game-on-33a97",
-            storageBucket: "game-on-33a97.appspot.com",
-            messagingSenderId: "62946106120"
-        };
-        firebase.initializeApp(config);
-    </script>
-    <!-- JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-    <!-- JAVASCRIPT -->
-    <script src="./assets/js/scripts.js">
-        // document.addEventListener('DOMContentLoaded', function() {
-        //     var elems = document.querySelectorAll('.datepicker');
-        //     var instances = M.Datepicker.init(elems, options);
-        //   });
-    </script>
 
+
+    <footer></footer>
 
 </body>
+
+<!-- JQUERY -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+<!-- JAVASCRIPT -->
+<script src="./assets/js/scripts.js">
+// document.addEventListener('DOMContentLoaded', function() {
+//     var elems = document.querySelectorAll('.datepicker');
+//     var instances = M.Datepicker.init(elems, options);
+//   });
+</script>
+
+<script>
+    $("#submit").on("click", function (event) {
+        event.preventDefault();
+
+        // Form validation
+        function validateForm() {
+            var isValid = true;
+            $(".form-control").each(function () {
+                if ($(this).val() === "") {
+                    isValid = false;
+                }
+            });
+
+            $(".chosen-select").each(function () {
+
+                if ($(this).val() === "") {
+                    isValid = false;
+                }
+            });
+            return isValid;
+        }
+
+        // If all required fields are filled
+        if (validateForm()) {
+            // Create an object for the user"s data
+            var userData = {
+                name: $("#name").val(),
+                photo: $("#photo").val(),
+                scores: [
+                    $("#q1").val(),
+                    $("#q2").val(),
+                    $("#q3").val(),
+                    $("#q4").val(),
+                    $("#q5").val(),
+                    $("#q6").val(),
+                    $("#q7").val(),
+                    $("#q8").val(),
+                    $("#q9").val(),
+                    $("#q10").val()
+                ]
+            };
+        };
+    })
+</script>
 
 </html>
