--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             <div class="col m3"></div>
             <div class="col m6">
                 <!-- start dynamicDiv -->
-                <div id="dynamicDiv">
+                <div id="dynamicDiv" style="display:none">
                     <div class="container" id="findEventDiv">
                         <div class="row" id="zipCodeRow">
                             <div class="col m4"></div>
@@ -48,7 +48,8 @@
                                         <!-- <strong>Enter your zip code:</strong> -->
                                         <div class="input-field">
                                             <input id="zipCode" type="text" class="validate center-align">
-                                            <label for="zipCode">Zip Code</label>
+                                            <!-- <label for="zipCode">Zip Code</label> -->
+                                            <span class="helper-text" data-error="wrong" data-success="right">Zip Code</span>
                                         </div>
                                     </div>
                                 </form>
@@ -74,7 +75,7 @@
                         </div>
                     </div>
                     <!-- ------------------------------- -->
-                    <div class="container fade-in" id="createEventDiv">
+                    <div class="container fade-in" id="createEventDiv" style="display:none">
                         <div class="row" id="eventFirstRow">
                             <form class="col m12">
                                 <div class="row">
@@ -158,8 +159,7 @@
         </div>
 
         <!-- GO HOME BUTTON  -->
-        <a href="/"><button class="btn btn-danger btn-lg">
-                <span class="fa fa-eye"></span>HOME</button></a>
+        <a href="./index.html"><button class="btn-large slide-in-blurred-bottom">HOME</button></a>
 
 
         <!-- SHOW RESULTS DIV -->
