Returns all data in specific values for easier result generation

--- a/public/index.html
+++ b/public/index.html
@@ -194,13 +194,10 @@
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+        <script src="./bundle.js"></script>
+        <script src="./dateformat.js"></script>
     <!-- JAVASCRIPT -->
-    <script src="./scripts.js">
-        // document.addEventListener('DOMContentLoaded', function() {
-        //     var elems = document.querySelectorAll('.datepicker');
-        //     var instances = M.Datepicker.init(elems, options);
-        //   });
-    </script>
+    <script src="./scripts.js"></script>
 
 
 </body>
