finCity and findState in index

--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,12 @@
                             <div class="col m4">
                                 <form>
                                     <div class="row center-align" id="rowCenterZip">
-                                        <!-- <strong>Enter your zip code:</strong> -->
+                                        <!-- <strong>Enter your city and state:</strong> -->
                                         <div class="input-field">
-                                            <input id="zipCode" type="text" class="validate center-align">
-                                            <!-- <label for="zipCode">Zip Code</label> -->
-                                            <span class="helper-text" data-error="wrong" data-success="right">Zip Code</span>
+                                            <input id="findCity" type="text" class="validate center-align">
+                                            <span class="helper-text" data-error="wrong" data-success="right">City</span>
+                                            <input id="findState" type="text" class="validate center-align">
+                                            <span class="helper-text" data-error="wrong" data-success="right">State</span>
                                         </div>
                                     </div>
                                 </form>
