--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,20 @@
 </head>
 
 <body>
+
+    <ul class="slideshow">
+            <li><span>Image 01</span></li>
+            <li><span>Image 02</span></li>
+            <li><span>Image 03</span></li>
+            <li><span>Image 04</span></li>
+            </ul>
+            <div class="container">
+                <header>
+                <!-- <h1>CSS3 <span>Fullscreen Slideshow</span></h1> -->
+            </header>
+            </div>
+
+    
     <header>
         <!-- logoDiv -->
         <div class="row" id="logoDiv"></div>
@@ -172,7 +186,7 @@
 
         </div>
 
-
+        
 
     </main>
     <!--end main-->
@@ -186,7 +200,7 @@
             authDomain: "game-on-33a97.firebaseapp.com",
             databaseURL: "https://game-on-33a97.firebaseio.com",
             projectId: "game-on-33a97",
-            storageBucket: "game-on-33a97.appspot.com",
+     ç       storageBucket: "game-on-33a97.appspot.com",
             messagingSenderId: "62946106120"
         };
         firebase.initializeApp(config);
@@ -195,13 +209,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <!-- JAVASCRIPT -->
-    <script src="./scripts.js">
-        // document.addEventListener('DOMContentLoaded', function() {
-        //     var elems = document.querySelectorAll('.datepicker');
-        //     var instances = M.Datepicker.init(elems, options);
-        //   });
-    </script>
-
+    <script src="./scripts.js"></script>
 
 </body>
 
