--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,15 @@
 
 <body>
 
+    <div id="overlay">
     <ul class="slideshow">
             <li><span>Image 01</span></li>
             <li><span>Image 02</span></li>
             <li><span>Image 03</span></li>
             <li><span>Image 04</span></li>
+            <li><span>Image 05</span></li>
             </ul>
-            <div class="container">
-                <header>
-                <!-- <h1>CSS3 <span>Fullscreen Slideshow</span></h1> -->
-            </header>
-            </div>
+        </div>
 
     
     <header>
