moved home button

--- a/public/index.html
+++ b/public/index.html
@@ -71,18 +71,18 @@
                         <div class="row" id="gameSportsRow">
                             <div class="col m6">
                                 <div class="container">
-                                    <button class="btn fade-in center-align" id="gamingBtn">Gaming</button>
+                                    <button class="btn-large fade-in center-align" id="gamingBtn">Gaming</button>
                                 </div>
                             </div>
                             <div class="col m6">
                                 <div class="container">
-                                    <button class="btn fade-in center-align" id="sportsBtn">Sports</button>
+                                    <button class="btn-large fade-in center-align" id="sportsBtn">Sports</button>
                                 </div>
                             </div>
                         </div>
                         <div class="row" id="submitFindDiv">
                             <div class="col m12">
-                                <button class="btn fade-in center-align" id="submitBtnFind">Submit</button>
+                                <button class="btn-large fade-in center-align" id="submitBtnFind">Submit</button>
                             </div>
                         </div>
                     </div>
@@ -150,6 +150,9 @@
                         </div>
                     </div>
                     <!-- end createEventDiv-->
+                    <!-- GO HOME BUTTON  -->
+                    <a href="./index.html"><button class="btn center-align">HOME</button></a>
+
                 </div>
                 <!--end dynamicDiv-->
             </div>
@@ -158,8 +161,6 @@
             <div class="col m3"></div>
         </div>
 
-        <!-- GO HOME BUTTON  -->
-        <a href="./index.html"><button class="btn-large slide-in-blurred-bottom">HOME</button></a>
 
 
         <!-- SHOW RESULTS DIV -->
