Leaflet and distance both work

--- a/public/index.html
+++ b/public/index.html
@@ -12,21 +12,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <!-- OUR CSS -->
     <link rel="stylesheet" type="text/css" media="screen" href="./styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+        crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+        crossorigin=""></script>
 </head>
 
 <body>
 
     <div id="overlay">
-    <ul class="slideshow">
+        <ul class="slideshow">
             <li><span>Image 01</span></li>
             <li><span>Image 02</span></li>
             <li><span>Image 03</span></li>
             <li><span>Image 04</span></li>
             <li><span>Image 05</span></li>
-            </ul>
-        </div>
+        </ul>
+    </div>
 
-    
+
     <header>
         <!-- logoDiv -->
         <div class="row" id="logoDiv"></div>
@@ -78,7 +82,7 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div id="mapid"></div>
                     </div>
                     <!-- ------------------------------- -->
                     <div class="container fade-in" id="createEventDiv" style="display:none">
@@ -169,7 +173,7 @@
 
         </div>
 
-        
+
 
     </main>
     <!--end main-->
@@ -191,8 +195,9 @@
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-        <script src="./bundle.js"></script>
-        <script src="./dateformat.js"></script>
+    <script src="./bundle.js"></script>
+    <script src="./dateformat.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <!-- JAVASCRIPT -->
     <script src="./scripts.js"></script>
 
